Ready for general use

--- a/apps/nextjs/public/locales/en/common.json
+++ b/apps/nextjs/public/locales/en/common.json
@@ -15,5 +15,13 @@
     "Login": "Login",
     "New on our platform?": "New on our platform?",
     "Create an account": "Create an account",
-    "Remember me": "Remember me"
+    "Remember me": "Remember me",
+    "Already have an account?": "Already have an account?",
+    "Sign in instead": "Sign in instead",
+    "or": "or",
+    "I agree to": "I agree to",
+    "privacy policy & terms": "privacy policy & terms",
+    "Sign up": "Sign up",
+    "Username": "Username",
+    "Confirm password": "Confirm password"
 }
